--- a/styles.css
+++ b/styles.css
@@ -7,19 +7,11 @@ body {
   box-sizing: border-box;
 }
 
-.dot {
-  height: 12px;
-  width: 12px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-}
-
 .material-symbols-outlined {
   bottom: 100%;
   height: 30px;
   width: 30px;
-  color: #D2DAFF;
+  color: #CFDAC8;
   font-variation-settings:
   'FILL' 1,
   'wght' 400,
@@ -29,13 +21,6 @@ body {
 
 .container {
   border: 3px solid #f1f1f1;
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
-}
-
-.top {
-  padding: 10px;
-  background: #f1f1f1;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
 }
@@ -53,7 +38,7 @@ body {
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  color: #D2DAFF;
+  color: #CFDAC8;
   text-align: center;
   font-size: 100px;
   font-family: 'Bebas Neue';
