--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ body {
   color: #CFDAC8;
   text-align: center;
   font-size: 100px;
-  font-family: 'Bebas Neue';
+  font-family: 'Roboto';
   padding: 10px;
 }
 
