--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 body {
+  height: 400vh;
   background-color: #ffffff;
   background-size: 10px 10px;
   background-image: repeating-linear-gradient(45deg, #f6f6f6 0, #f6f6f6 1px, #ffffff 0, #ffffff 50%);
